prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/initialization_required.diag.txt
ERROR: Initialization required
testData/diagnostics/compilation_errors/sema_errors/initialization_required.nut:2:11

// EXPECT_ERROR: "Initialization required"
if (local x; x < 10; x++) {}
           ^


